# PhotoNumberGameBot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
photonumbergamebot/: __main__.py
photonumbergamebot/resources/texts/: example.txt  hello.txt  restrictions.txt  rules.txt
photonumbergamebot/src/: bot.py  settings.py  utils.py
photonumbergamebot/src/data_managers/: db_controller.py  db_models.py  texts_handler.py
